namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-manage-a-supervision-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-manage-a-supervision-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    cloud-platform.justice.gov.uk/namespace: "hmpps-manage-a-supervision-preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation-integration-team"
    cloud-platform.justice.gov.uk/application: "Manage a Supervision"
    cloud-platform.justice.gov.uk/owner: "Probation Integration: probation-integration-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-manage-a-supervision-ui"
    cloud-platform.justice.gov.uk/team-name: "probation-integration"
    cloud-platform.justice.gov.uk/review-after: ""
